btctoilsapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: btctoilsapp
  labels:
    app: btctoilsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: btctoilsapp
  template:
    metadata:
      labels:
        app: btctoilsapp
    spec:
      containers:
      - name: btctoilsapp-web
        image: muhammadkrad/btc_to_ils_app:latest
        ports:
        - containerPort: 5000

apiVersion: v1
kind: Service
metadata:
  name: btctoilsapp-service
  labels:
    app: btctoilsapp-service
spec:
  type: ClusterIP
  selector:
    app: btctoilsapp
  ports:
  - name: btctoilsapp-service
    protocol: TCP
    port: 5000
    targetPort: 5000
