ynet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ynet
  labels:
    app: ynet
spec: 
  replicas: 1
  selector:
  
    matchLabels:
      app: ynet
  template:
    metadata:
      labels:
        app: ynet
    spec:
      containers:
      - name: ynet-web
        image: muhammadkrad/ynet:latest
        ports:
        - containerPort: 8081


apiVersion: v1
kind: Service
metadata:
  name: ynet-service
  labels: 
    app: ynet-service
spec:
  type: ClusterIP
  selector:
    app: ynet
  ports:
  - name: ynet-service
    protocol: TCP
    port: 8081
    targetPort: 8081
