ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    
spec:
  rules:
    - http:
        paths:
          - path: /btctoilsapp(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: btctoilsapp-service
                port:
                  number: 80
    - http:
        paths:
          - path: /ynet(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ynet-service
                port:
                  number: 80
